...
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_margin="15dp"
            android:hint="Email"/>

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_margin="15dp"
            android:inputType="textPassword"
            android:hint="Password"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_margin="15dp"
            android:text="Login"
            android:textSize="20dp"
            android:backgroundTint="#146DDA"/>

    </LinearLayout>

</LinearLayout>
