...
            android:backgroundTint="#146DDA"
            android:drawableLeft="@drawable/plus"
            android:text="Aggiungi Libri"
            android:textSize="13sp" />

        <Button
            android:id="@+id/modifyButton"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#146DDA"
            android:drawableLeft="@drawable/paintbrush"
            android:text="Modifica Libri"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>
