...
                android:backgroundTint="#146DDA"
                android:text="Attiva"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <Button
                android:id="@+id/concludiButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:backgroundTint="#D9364F"
                android:text="Concludi"
                android:textColor="@color/white"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>

...
